[package]
name = "libcangjie-howtotype"
version = "0.1.0"
authors = ["Po-Yi Tsai <abt8601@protonmail.ch>"]
edition = "2024"
rust-version = "1.84"
description = "Find out how to type a character by querying libcangjie's database"
repository = "https://github.com/abt8601/libcangjie-howtotype"
license = "Unlicense"
keywords = ["cangjie"]
categories = ["command-line-utilities"]

[dependencies]
